<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rgn.e_swasthya.FindDoctor">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/app_fragment_title"
        android:text="Find Doctor"
        android:id="@+id/finddoctortitle"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/finddoctortitle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/pain"
            android:id="@+id/Internalpainchkbox"
            />
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/inflammation"
            android:id="@+id/inflammationchkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/coughing"
            android:id="@+id/coughingchkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/injury"
            android:id="@+id/injurychkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/fever"
            android:id="@+id/feverchkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/rashes"
            android:id="@+id/rasheschkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/vomiting"
            android:id="@+id/vomitingchkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/tiredness"
            android:id="@+id/tirednesschkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/shivering"
            android:id="@+id/shiveringchkbox"/>
        <CheckBox
            style="@style/checkbox_symproms_style"
            android:text="@string/loosemotion"
            android:id="@+id/loosemotionchkbox"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Use my current location"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/usemylocation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="OR"
            android:textSize="20dp"/>
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nearest Street"
            android:focusableInTouchMode="true"
            android:id="@+id/neareststreet"/>
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City"
            android:focusableInTouchMode="true"
            android:id="@+id/city"/>
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        app:fabSize="normal"
        android:id="@+id/fabdone"/>
</RelativeLayout>
